Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-3899

Grouped messages with expired TTL will cause the broker to crash.

Attach filesAttach ScreenshotVotersWatch issueWatchersCreate sub-taskLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Blocker
    • Resolution: Fixed
    • 0.16
    • 0.16
    • C++ Broker
    • None

    Description

      If a message on a grouped message queue has an expired TTL, the broker will crash when de-queuing it.

      lt-qpidd: ../../../qpid/cpp/src/qpid/broker/MessageGroupManager.cpp:156: virtual void qpid::broker::MessageGroupManager::dequeued(const qpid::broker::QueuedMessage&): Assertion `state.acquired != 0' failed.
      Aborted (core dumped)

      Attachments

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            kgiusti Ken Giusti
            kgiusti Ken Giusti
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment