QPID-3899: prevent TTL expiration of grouped msg from crashing broker.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1303143 13f79535-47bb-0310-9956-ffa450edef68